# infra

./: .gitignore  CLAUDE.md  Justfile  README.md  bootstrap.sh  deploy  dumpconf.sh  flake.nix  pyproject.toml  sync
.concierge-backup/: flake.nix-2024-06-19T19:02:20.939564+07:00  flake.nix-2024-08-29T15:27:36.775361456+07:00  flake.nix-2024-09-14T14:58:32.830976038+07:00  flake.nix-2024-09-15T06:46:12.018100778+00:00  flake.nix-2024-09-15T06:48:20.372373774+00:00
astra/: configuration.nix
certs/: cloudflare-ssh-ca.pub
derivations/generate-containers/: build.sh  default.nix  test.nix
helm/longhorn/: longhorn-values.yaml
helm/nagios/: docker-compose.yml
helm/test/: pod-test.yaml  pvc-test.yaml
home/: astra.nix  common-home.nix  common-pkgs-cli.nix  common-pkgs-gui.nix  common-pkgs.nix  nixos.nix  vulcan-nixos.nix  yggdrasil.nix
home/secrets/: age-yubikey-identity-93827d77.txt  capture-identity.sh
k8s/: ceph-cluster.yaml
misc/: garage-remote.toml
misc/scripts/: load-env-secrets.py
nickel/: tf-ncl.ncl
nickel/nixos-containers/: garage.ncl
nix/: flake.nix
nix/_common/: nixosSystems.nix
nix/_devshells/: default-ncl.nix  (+1 more)
nixos/: age.nix  boot.nix  configuration.2024-08-31T12:54.nix  configuration.nix  configuration.sync-conflict-20240421-135718-5KA4XVZ.nix  hardware-configuration.nix  programs.nix  security.nix  services.nix  user.nix
scripts/: synergy-install.sh
secrets/: .sops.yaml  cloudflare-tunnel-key.age  odoo-env.age  secrets.nix  secrets.yaml
terraform/: .terraform.lock.hcl  network.tf  powerdns.tf_  providers.tf  vars.tf
(+214 files in other folders)
