[project]
name = "infra"
version = "0.1.0"
description = "Aaron's Infrastructure Deployment Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "loguru>=0.7.3",
    "returns>=0.25.0",
    "rich>=14.0.0",
    "ruff>=0.12.4",
    "typer>=0.16.0",
]

[project.scripts]
carson = "deploy.app:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
